data/derived/comb/progs/unify/prog0594.ml.out
Characters 481-496:
  | Crazy(e1, e2, e3) -> Average(e1, e2);;
                         ^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         float
